# methlab

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml  next.config.ts  package-lock.json
backend/: .gitignore  Dockerfile.api  Dockerfile.migrate  prefect.yaml  pyproject.toml
backend/apps/api/: pyproject.toml
backend/apps/api/app/: config.py  database.py  main.py
backend/apps/api/app/routes/: alerts.py  auth.py  dashboard.py  deks.py  facilities.py  reports.py  sentinel2.py  storage.py  tropomi.py
backend/apps/api/app/services/: alert_service.py  report_service.py
backend/apps/ml/: pyproject.toml
backend/apps/ml/app/: main.py
backend/apps/ml/models/: classifier.py  tropomi_cnn.py  unet.py
backend/apps/registry/: pyproject.toml  seed_coal_mines.py
backend/apps/sentinel2/: background.py  config.py  download.py  enhancement.py  pipeline.py  pyproject.toml  quantification.py  radiative.py  segmentation.py
backend/apps/tropomi/: config.py  download.py  metrics.py  pipeline.py  pyproject.toml  rotation.py  visualization.py  wind.py
backend/flows/: s2_detection.py  tropomi_screening.py
backend/migrations/: 001_facilities.sql  002_tropomi_observations.sql  003_s2_detections.sql  004_alerts.sql  005_auth_and_reports.sql  006_nger_facility_data.sql
backend/scripts/: run_all_facilities.py  run_all_quarters.py  run_api.bat  run_api.ps1  run_migrations.py  run_moranbah_north.py  run_s2_top_emitters.py  seed_alerts.py  seed_s2_detections.py  seed_tropomi_synthetic.py  seed_vam_defaults.py  setup.py  test_tropomi_download.py  validate_known_emitters.py
backend/tests/: test_api_live.py  test_synthetic_plume.py
docs/: go-to-market-strategy.md  update_marketing_cells.py  wellknown-ux-restructure.md
docs/assessments/: arrow-bowen-2026-03-30.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/app/(monitoring)/dashboard/: page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/cost-benefit/: page.tsx
frontend/src/app/plume-demo/: page.tsx
frontend/src/components/home/: FacilityFeatureCard.tsx  MonitoringPreview.tsx
frontend/src/components/layout/: Footer.tsx
frontend/src/components/leak/: LeakViewer.tsx
frontend/src/components/monitoring/: DashboardView.tsx  S2DetectionCard.tsx  TropomiTearSheet.tsx
frontend/src/components/reports/: ReportTable.tsx
frontend/src/components/three/: AtmosphereScene.tsx  GlobeView.tsx  LeakScene.tsx  MapTiles.tsx  PlumeMesh.tsx  SceneCanvas.tsx
frontend/src/components/ui/: CaptureButton.tsx  CostCalculator.tsx  PlumeCard.tsx  PlumeHUD.tsx  PlumeStats.tsx  TimelineControls.tsx
frontend/src/hooks/: usePlume.ts  usePlumePlayback.ts  usePlumes.ts
frontend/src/lib/api/: carbon-mapper.ts  facility-types.ts  methlab-api.ts  nger-types.ts  plume-timeseries.ts  tropomi-types.ts  types.ts
frontend/src/lib/data/: seed-facilities.ts
frontend/src/lib/plume/: plume-physics.ts  plume-texture.ts
frontend/src/lib/stores/: scene-store.ts
infra/: Caddyfile  deploy.sh  methlab.geosynergy.com.au.caddyfile  methlab.service
infra/systemd/: methlab-api.service  methlab-frontend.service  methlab-ml.service
src/app/: globals.css  layout.tsx  page.tsx
src/app/(monitoring)/alerts/: page.tsx
src/app/api/facilities/: route.ts
src/app/api/storage/: route.ts
src/app/leaks/: page.tsx
src/app/map/: page.tsx
src/components/home/: HeroGlobe.tsx
src/components/layout/: Header.tsx
src/components/map/: MapExplorer.tsx
src/components/monitoring/: AlertsView.tsx  EmissionTimeSeries.tsx  FacilityExplorer.tsx  S2View.tsx  TropomiTearSheet.tsx  TropomiView.tsx
src/components/reports/: NgerMethod2Report.tsx  SatelliteVerification.tsx
src/components/three/: AtmosphereScene.tsx  GlobeView.tsx  LeakScene.tsx
src/hooks/: useFacilities.ts
src/lib/api/: alert-types.ts  deks-context.ts  methlab-api.ts  sentinel2-types.ts
src/lib/plume/: plume-color.ts  plume-physics.ts
src/lib/utils/: coordinates.ts  formatting.ts
(+15 files in other folders)
