[project]
name = "methlab-api"
version = "0.1.0"
description = "MethLab - Continuous Fugitive Methane Monitoring Service"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

