[project]
name = "methlab-ml"
version = "0.1.0"
description = "MethLab ML models — plume segmentation, classification, detection"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "segmentation-models-pytorch>=0.3.3",
    "timm>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-image>=0.22.0",
    "rasterio>=1.3.0",
    "matplotlib>=3.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "boto3>=1.34.0",
    "psycopg[binary]>=3.2.0",
    "methlab-common",
]

[tool.uv.sources]
methlab-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
