[project]
name = "methlab-registry"
version = "0.1.0"
description = "MethLab Facility Registry - Ingest and manage facility data"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "methlab-common",
]

[tool.uv.sources]
methlab-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
