[project]
name = "methlab-sentinel2"
version = "0.1.0"
description = "MethLab Sentinel-2 SWIR methane plume quantification"
requires-python = ">=3.11"
dependencies = [
    "pystac-client>=0.8.0",
    "xarray>=2024.0.0",
    "rasterio>=1.3.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "scikit-image>=0.22.0",
    "matplotlib>=3.8.0",
    "shapely>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "methlab-common",
]

[tool.uv.sources]
methlab-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
